<resources>
    <string name="app_name">AndroidUdemyCoupon</string>
    <string name="search">Search</string>
    <string name="lessons">Lessons</string>
    <string name="settings">Settings</string>
    <string name="courses">Courses</string>
    <string name="sign_up_date">sign up date:</string>
    <string name="have_enrolled">have enrolled:</string>
    <string name="huythanh0x">huythanh0x</string>
    <string name="prefer_category">PREFER CATEGORY</string>
    <string name="setting">SETTING</string>
    <string name="dark_mode">DARK MODE</string>
    <string name="new_coupons_notification">NEW COUPONS NOTIFICATION</string>
    <string name="filter">Filter</string>
    <string name="always_be_free">ALWAYS BE FREE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coupoons_left">coupoons left</string>
    <string name="coupons_left">coupons left</string>
    <string name="course_length">course length</string>
    <string name="language">language</string>
    <string name="course_level">course level</string>
    <string name="xxx_students">xxx students</string>
    <string name="loading_reviews">loading reviews</string>
    <string name="loading_students">loading students</string>
    <string name="description">DESCRIPTION</string>
    <string name="share">SHARE</string>
    <string name="open_browser">OPEN BROWSER</string>
    <string name="enroll_now">ENROLL NOW</string>
    <string name="preview">preview</string>
    <string name="heading">HEADING</string>
    <string name="prefer_keywords">PREFER KEYWORDS</string>
    <string name="new_prefer_category_coupon_notification">NEW PREFER CATEGORY COUPON NOTIFICATION</string>
    <string name="new_prefer_coupon_coupon_notification">NEW PREFER COUPON COUPON NOTIFICATION</string>
    <string name="notification_by_categories">NOTIFICATION BY CATEGORIES</string>
    <string name="notification_by_keywords">NOTIFICATION BY KEYWORDS</string>
    <string name="photography_video"><![CDATA[Photography & Video]]></string>
    <string name="health_fitness"><![CDATA[Health & Fitness]]></string>
    <string name="teaching_academics"><![CDATA[Teaching & Academics]]></string>
    <string name="finance_accounting"><![CDATA[Finance & Accounting]]></string>
    <string name="it_software"><![CDATA[IT & Software]]></string>
    <string name="office_productivity">Office Productivity</string>
    <string name="personal_development">Personal Development</string>
    <string name="design">Design</string>
    <string name="marketing">Marketing</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="music">Music</string>
    <string name="test_preparation">Test Preparation</string>
    <string name="by_level">By level</string>
    <string name="by_rating">By rating</string>
    <string name="by_content_length">By Content Length</string>
    <string name="by_language">By Language</string>
    <string name="all_levels">All Levels</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="above_4_5">Above 4.5</string>
    <string name="from_4_to_4_5">From 4 to 4.5</string>
    <string name="from_3_to_4">From 3 to 4</string>
    <string name="no_rating">No rating</string>
    <string name="_0_2_hours">0 - 2 Hours</string>
    <string name="_3_6_hours">3 - 6 Hours</string>
    <string name="_7_16_hours">7 - 16 Hours</string>
    <string name="_17_hours">17+ Hours</string>
    <string name="english">English</string>
    <string name="all_languages">All Languages</string>
    <string name="above_3_5">Above 3.5</string>
    <string name="above_4_0">Above 4.0</string>
    <string name="discard_filter">DISCARD FILTER</string>
    <string name="channel_description">udemy_coupon_channel</string>
    <string name="channel_name">udemy_coupn_channel_name</string>
    <string name="channel_id">channel_id</string>
    <string name="loading_previews_videos">LOADING PREVIEWS VIDEOS</string>
    <string name="loading_enroll_page">LOADING ENROLL PAGE</string>
    <string name="loading_your_courses">LOADING YOUR COURSES</string>
    <string name="loading_coupons">Loading coupons</string>
    <string name="last_fetch_time">last fetch time</string>
</resources>