<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryBackground">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/by_language"
            android:textColor="@color/headingTitle"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/language_filter_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
            app:selectionRequired="true"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_english"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minWidth="120dp"
                android:text="@string/english"
                android:textSize="10sp"
                app:chipIcon="@drawable/baseline_filter_alt_24"
                app:chipStrokeColor="@color/superDarkBlue"
                app:chipStrokeWidth="2dp"
                app:layout_constraintEnd_toStartOf="@+id/chip_all_languages"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".45" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all_languages"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120dp"
                android:text="@string/all_languages"
                android:textSize="10sp"
                app:chipStrokeColor="@color/superDarkBlue"
                app:chipStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/chip_english"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".45" />
        </com.google.android.material.chip.ChipGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/levelTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/by_level"
            android:textColor="@color/headingTitle"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/language_filter_container" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/level_filter_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacingVertical="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/levelTitleTextView"
            app:selectionRequired="true"
            app:singleLine="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all_level"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minWidth="120dp"
                android:text="@string/all_levels"
                android:textSize="10sp"
                app:chipStrokeColor="@color/superDarkBlue"
                app:chipStrokeWidth="2dp"
                app:layout_constraintEnd_toStartOf="@id/chip_beginner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".45" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_beginner"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minWidth="120dp"
                android:text="@string/beginner"
                android:textSize="10sp"
                app:chipStrokeColor="@color/superDarkBlue"
                app:chipStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/chip_all_level"
                app:layout_constraintTop_toTopOf="@+id/chip_all_level"
                app:layout_constraintWidth_percent=".45" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_intermediate"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minWidth="120dp"
                android:text="@string/intermediate"
                android:textSize="10sp"
                app:chipStrokeColor="@color/superDarkBlue"
                app:chipStrokeWidth="2dp"
                app:layout_constraintEnd_toStartOf="@id/chip_advanced"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chip_all_level"
                app:layout_constraintWidth_percent=".45" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_advanced"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minWidth="120dp"
                android:text="@string/advanced"
                android:textSize="10sp"
                app:chipStrokeColor="@color/superDarkBlue"
                app:chipStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/chip_intermediate"
                app:layout_constraintTop_toBottomOf="@+id/chip_beginner"
                app:layout_constraintWidth_percent=".45" />
        </com.google.android.material.chip.ChipGroup>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ratingTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/by_rating"
            android:textColor="@color/headingTitle"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/level_filter_container" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/rating_filter_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacingVertical="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingTitleTextView"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/rating_above_4_5"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minWidth="120dp"
                android:text="@string/above_4_5"
                android:textSize="10sp"
                app:chipStrokeColor="@color/superDarkBlue"
                app:chipStrokeWidth="2dp"
                app:layout_constraintEnd_toStartOf="@id/rating_from_4_to_4_5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".45" />

            <com.google.android.material.chip.Chip
                android:id="@+id/rating_from_4_to_4_5"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120dp"
                android:text="@string/above_4_0"
                android:textSize="10sp"
                app:chipStrokeColor="@color/superDarkBlue"
                app:chipStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rating_above_4_5"
                app:layout_constraintTop_toTopOf="@+id/rating_above_4_5"
                app:layout_constraintWidth_percent=".45" />

            <com.google.android.material.chip.Chip
                android:id="@+id/rating_from_3_to_4"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120dp"
                android:text="@string/above_3_5"
                android:textSize="10sp"
                app:chipStrokeColor="@color/superDarkBlue"
                app:chipStrokeWidth="2dp"
                app:layout_constraintEnd_toStartOf="@id/rating_no_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_above_4_5"
                app:layout_constraintWidth_percent=".45" />

            <com.google.android.material.chip.Chip
                android:id="@+id/rating_no_rating"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120dp"
                android:text="@string/no_rating"
                android:textSize="10sp"
                app:chipStrokeColor="@color/superDarkBlue"
                app:chipStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rating_from_3_to_4"
                app:layout_constraintTop_toBottomOf="@+id/rating_from_4_to_4_5"
                app:layout_constraintWidth_percent=".45" />
        </com.google.android.material.chip.ChipGroup>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contentLengthTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/by_content_length"
            android:textColor="@color/headingTitle"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating_filter_container" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/content_length_filter_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacingVertical="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentLengthTitleTextView"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/contentLength_from_0_to_2_hours"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minWidth="120dp"
                android:text="@string/_0_2_hours"
                android:textSize="10sp"
                app:chipStrokeColor="@color/superDarkBlue"
                app:chipStrokeWidth="2dp"
                app:layout_constraintEnd_toStartOf="@id/contentLength_from_3_to_6_hours"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".45" />

            <com.google.android.material.chip.Chip
                android:id="@+id/contentLength_from_3_to_6_hours"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120dp"
                android:text="@string/_3_6_hours"
                android:textSize="10sp"
                app:chipStrokeColor="@color/superDarkBlue"
                app:chipStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/contentLength_from_0_to_2_hours"
                app:layout_constraintTop_toTopOf="@+id/contentLength_from_0_to_2_hours"
                app:layout_constraintWidth_percent=".45" />

            <com.google.android.material.chip.Chip
                android:id="@+id/contentLength_from_7_to_16_hours"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120dp"
                android:text="@string/_7_16_hours"
                android:textSize="10sp"
                app:chipStrokeColor="@color/superDarkBlue"
                app:chipStrokeWidth="2dp"
                app:layout_constraintEnd_toStartOf="@id/contentLength_above_17_hours"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contentLength_from_0_to_2_hours"
                app:layout_constraintWidth_percent=".45" />

            <com.google.android.material.chip.Chip
                android:id="@+id/contentLength_above_17_hours"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120dp"
                android:text="@string/_17_hours"
                android:textSize="10sp"
                app:chipStrokeColor="@color/superDarkBlue"
                app:chipStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/contentLength_from_7_to_16_hours"
                app:layout_constraintTop_toBottomOf="@+id/contentLength_from_3_to_6_hours"
                app:layout_constraintWidth_percent=".45" />
        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>