<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.setting.SettingFragment">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/prefer_keywords_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/prefer_keywords"
            android:textColor="@color/darkBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/prefer_keywords_chip_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:chipSpacingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prefer_keywords_textView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/prefer_categories_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/prefer_category"
            android:textColor="@color/darkBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/prefer_keywords_textView"
            app:layout_constraintTop_toBottomOf="@+id/prefer_keywords_chip_group"
            app:layout_goneMarginStart="10dp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/prefer_categories_chip_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:chipSpacingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="@+id/prefer_keywords_chip_group"
            app:layout_constraintStart_toStartOf="@+id/prefer_keywords_chip_group"
            app:layout_constraintTop_toBottomOf="@id/prefer_categories_textView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/setting_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/setting"
            android:textColor="@color/darkBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/prefer_categories_textView"
            app:layout_constraintTop_toBottomOf="@+id/prefer_categories_chip_group" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dark_mode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/dark_mode"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/setting_textView"
            app:layout_constraintTop_toBottomOf="@+id/setting_textView" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/dark_mode_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/dark_mode_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dark_mode_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/new_coupon_notification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/new_coupons_notification"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/dark_mode_text"
            app:layout_constraintTop_toBottomOf="@+id/dark_mode_text" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/new_coupon_notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/new_coupon_notification_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/new_coupon_notification_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/new_prefer_category_coupon_notification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/notification_by_categories"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/dark_mode_text"
            app:layout_constraintTop_toBottomOf="@+id/new_coupon_notification_text" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/new_prefer_category_coupon_notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/new_prefer_category_coupon_notification_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/new_prefer_category_coupon_notification_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/new_prefer_keyword_coupon_notification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/notification_by_keywords"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/dark_mode_text"
            app:layout_constraintTop_toBottomOf="@+id/new_prefer_category_coupon_notification_text" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/new_prefer_keyword_coupon_notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/new_prefer_keyword_coupon_notification_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/new_prefer_keyword_coupon_notification_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>